--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <p style="margin-bottom: 30px;"><strong>Coming Soon</strong></p>
     <p>This link will display one of the best Fantasy books:</p>
     <p style="margin-bottom: 30px;"><a href="https://www.goodreads.com/book/show/186074.The_Name_of_the_Wind">The Name of the Wind</a></p>
-    <p><strong>Made by Eng/Ahmed Mahmoud</strong></p>
+    <p><strong>Made by Ahmed Mahmoud</strong></p>
   </div>
 
 </body>
